--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ds-code",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ds-code.ca",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -10,6 +11,7 @@
     "framer-motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
